grammar.js
    source_file: ($) => repeat($._top_level_item),

    _top_level_item: ($) =>
      choice(
        $.preproc_if,
        $.preproc_ifdef,
        $.preproc_include,
        $.preproc_def,
        $.preproc_function_def,
        $.preproc_call,
        $.line_marker,
        $.program
      ),

    _c_code: ($) =>
      choice(
        seq("%{", alias(repeat(choice(/[^}%]/, "}", "%")), $.c_code), "}%"),
        seq("%%", alias(/[^\n]*/, $.c_code), "\n")
      ),

    program: ($) =>
      seq(
        "program",
        field("name", $.identifier),
        optional($.program_param),
        repeat($.initial_defn),
        optional($.entry),
        repeat1($.state_set),
        optional($.exit),
        repeat($.final_defn)
      ),

    entry: ($) => seq("entry", $.block),
    state_set: ($) =>
      seq(
        "ss",
        field("name", $.identifier),
        "{",
        repeat($.ss_defn),
        repeat1($.state),
        "}"
      ),
    state: ($) => seq("state", field("name", $.identifier), $.state_block),
    state_block: ($) =>
      seq(
        "{",
        repeat($.state_defn),
        optional($.entry),
        // Technically repeat1, but this hinders development
        repeat($.transition),
        optional($.exit),
        "}"
      ),
    block: ($) => seq("{", repeat($.block_defn), repeat($.statement), "}"),
    statement: ($) =>
      choice(
        $.break_statement,
        $.continue_statement,
        $._c_code,
        $.block,
        $.if_statement,
        $.while_statement,
        $.for_statement,
        seq($._comma_expr, ";")
      ),
    _expr: ($) =>
      choice(
        $.number_literal,
        $.char_literal,
        $.string_literal,
        $.identifier,
        $.parenthesized_expression,
        $.call_expression,
        prec.left($.exit_expression),
        prec.left($.subscript_expression),
        prec.left($.field_expression),
        $.update_expression,
        $.unary_expression,
        $.binary_expression,
        $.conditional_expression,
        $.assignment_expression,
        $.cast_expression,
        prec.right($.sizeof_expression),
        $.true,
        $.false,
        $.null
      ),

    parenthesized_expression: ($) => seq("(", $._comma_expr, ")"),
    call_expression: ($) =>
      prec(PREC.CALL, seq(field("function", $._expr), "(", optional($.args), ")")),
    _comma_expr: ($) => choice($._expr, $.comma_expr),
    args: ($) => commaSep1($._expr),

    // Taken from:
    // https://github.com/tree-sitter/tree-sitter-c/blob/master/grammar.js

    string_literal: ($) =>
      seq(
        choice('L"', 'u"', 'U"', 'u8"', '"'),
        repeat(
          choice(
            alias(token.immediate(prec(1, /[^\\"\n]+/)), $.string_content),
            $.escape_sequence
          )
        ),
        '"'
      ),

    number_literal: ($) => {
      const separator = "'";
      const hex = /[0-9a-fA-F]/;
      const decimal = /[0-9]/;
      const hexDigits = seq(repeat1(hex), repeat(seq(separator, repeat1(hex))));
      const decimalDigits = seq(
        repeat1(decimal),
        repeat(seq(separator, repeat1(decimal)))
      );
      return token(
        seq(
          optional(/[-\+]/),
          optional(choice("0x", "0b")),
          choice(
            seq(
              choice(
                decimalDigits,
                seq("0b", decimalDigits),
                seq("0x", hexDigits)
              ),
              optional(seq(".", optional(hexDigits)))
            ),
            seq(".", decimalDigits)
          ),
          optional(seq(/[eEpP]/, optional(seq(optional(/[-\+]/), hexDigits)))),
          repeat(choice("u", "l", "U", "L", "f", "F"))
        )
      );
    },

    char_literal: ($) =>
      seq(
        choice("L'", "u'", "U'", "u8'", "'"),
        choice($.escape_sequence, token.immediate(/[^\n']/)),
        "'"
      ),

    identifier: ($) => /[a-zA-Z_]\w*/,
